<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/status"
            android:checked="false"
            android:icon="@drawable/ic_bank_transaction"
            android:title="@string/status" />

        <item
            android:id="@+id/incoming"
            android:checked="false"
            android:icon="@drawable/ic_deposit"
            android:title="@string/incoming" />

        <item
            android:id="@+id/outgoing"
            android:checked="false"
            android:icon="@drawable/ic_withdrawal"
            android:title="@string/outgoing" />
        <item
            android:id="@+id/invoices"
            android:checked="false"
            android:icon="@drawable/ic_address_book"
            android:title="Invoices" />

        <item
            android:id="@+id/inventory"
            android:checked="false"
            android:icon="@drawable/ic_barcode"
            android:title="@string/plans" />

        <item
            android:id="@+id/accounts"
            android:checked="false"
            android:icon="@drawable/ic_abacus"
            android:title="@string/accounts" />

        <item
            android:id="@+id/audit"
            android:checked="false"
            android:icon="@drawable/ic_balance"
            android:title="@string/audit" />

        <item
            android:id="@+id/settings"
            android:checked="false"
            android:icon="@drawable/ic_atom"
            android:title="@string/settings" />

    </group>
</menu>